--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TASKLIST</title>
 </head>
 <body>
-    
+    <nav id="NAV">TEST</nav>
+    <main id="MAIN">TEST</main>
+    <aside id="ASIDE">TEST</aside>
+    <footer id="FOOTER">TEST</footer>
 </body>
 </html>
