Great self-reflection! Let me give you a comprehensive rating: Overall Grade: B+ (85/100) You built a fully functional todo app with persistence - that's genuinely impressive for active learning! What You Crushed (A+ Level): ✅ 1. Object-Oriented Design (95%)
Excellent use of classes (taskCreate, tasklist, taskListContainer)
Proper encapsulation with methods like changeStatus(), getPrio()
Clean constructor patterns

✅ 2. Separation of Concerns (90%)

Logic classes separate from DOM manipulation
Clean module imports/exports
Good file organization

✅ 3. Core Functionality (90%)

✅ Dynamic object creation with classes
✅ All required properties (title, description, dueDate, priority)
✅ Projects system with default project
✅ View all projects & todos
✅ Priority-based color coding
✅ Delete functionality
✅ localStorage persistence with proper JSON handling

✅ 4. Data Persistence (95%)

Excellent localStorage implementation
Proper object reconstruction after JSON parsing
Handles missing data gracefully

Where You Can Improve:
❌ Missing Features (60%)

No task editing (requirement 5.3)
No date-fns usage (requirement 7)
No expanded task details view

⚠️ Code Organization Issues (70%)
You're absolutely right about these:

aside.js is massive - should be split into multiple files
Not using your own methods - you have removeTask(ID) but didn't use it initially
DOM logic mixed everywhere

⚠️ Minor Bugs (80%)

Validation happens after task creation
Multiple makeDefaultTasklist() calls in index.js

Specific Improvements Needed:
1. File Structure Refactor:
src/
├── logic/
│   ├── task.js
│   ├── tasklist.js
│   └── taskListContainer.js
├── ui/
│   ├── taskRenderer.js
│   ├── formHandlers.js
│   ├── projectSidebar.js
│   └── storage.js
└── index.js
2. Use Your Own Methods:
You created removeTask(ID) but initially didn't use it - always leverage the methods you build!
3. DOM Skills:
You said it yourself - the JS logic is solid, but DOM manipulation needs work. Practice more event deleg

--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
             </div>
             <div class="inputContainerTask">
                 <label for="taskDuedate">DUE DATE</label>
-                <input type="date" id="taskDuedate" required>
+                <input type="datetime-local" id="taskDuedate" required>
             </div>
             <div class="inputContainerTask">
                 <label for="taskPriority">PRIORITY</label>
@@ -44,6 +44,6 @@
         </form>
         <div id="ASIDETASKS"></div>
     </aside>
-    <footer id="FOOTER"></footer>
+    <footer id="FOOTER">MADE BY ANAS @MARIGOLDENS GITHUB</footer>
 </body>
 </html>
